<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLeaderLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCategoryThree"
    tools:context=".liveQuiz.ActivityLiveQuizQuestionResult">

    <ImageView
        android:id="@+id/activity_quiz_question_app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_app_logo_primary"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/activity_quiz_question_answer_result_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/activity_quiz_question_app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_cross_transparent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/activity_quiz_question_answer_result_text"
        style="@style/ThemeTextViewH1Light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_below="@+id/activity_quiz_question_answer_result_image"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:fontFamily="@font/raleway_bold" />

    <android.support.v7.widget.CardView
        android:id="@+id/activity_quiz_question_score_card"
        style="@style/ThemeCardView"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/activity_quiz_question_answer_result_text"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:cardCornerRadius="5dp">

        <TextView
            android:id="@+id/activity_quiz_question_total_score"
            style="@style/ThemeTextViewH1Dark"
            android:layout_width="match_parent"
            android:fontFamily="@font/roboto_medium"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/llPosition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_quiz_question_score_card"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/ThemeTextViewH1Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_you_are_at" />

        <TextView
            android:id="@+id/tvPosition"
            style="@style/ThemeTextViewH1Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <TextView
            style="@style/ThemeTextViewH1Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/text_position"
            android:visibility="gone"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

    <TextView
        android:id="@+id/lblScoreboard"
        style="@style/ThemeTextViewH1Light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llPosition"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/text_scoreboard" />

    <LinearLayout
        android:id="@+id/llLblRnk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblScoreboard"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            style="@style/ThemeTextViewH1Light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/rank" />

        <TextView
            style="@style/ThemeTextViewH1Light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5.5"
            android:text="@string/name" />

        <TextView
            style="@style/ThemeTextViewH1Light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:text="@string/score" />
    </LinearLayout>

    <View
        android:id="@+id/viewRank"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/llLblRnk"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        android:background="@color/colorTextPrimaryLight" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvLeaderBoard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/viewRank"
        android:layout_margin="16dp"
        android:scrollbars="none" />

</RelativeLayout>